# hpchomework

./: CMakeLists.txt  README.md  solve_linear  solve_linear.c
alpha_beta/: alpha.txt  alpha_beta.py
cpp-gpu/: .gitignore  README.md  build_windows.bat
cpp-gpu/src/: heat1d_cuda.cu
explicit/: .Makefile.swo  .Makefile.swp  Makefile  exp.c  exp_hdf5.c  ref.c  ty_script
implicit/: Makefile  imp.c  ty_script
src/: hdf5_restart.c  heat_problem.h  initialization.c  main.c  time_integration.c
verification/: figure_error.py  num_solution.txt
